Resubmit for quick review.