@@ -78,6 +78,7 @@ public class ArgumentParser {
 	 * @see String#length()
 	 */
 	public static boolean isFlag(String arg) {
+		// TODO return arg != null && arg.length() > 1 && arg.charAt(0) == '-';
 		if (arg != null)
 			return arg.length() > 1 && arg.charAt(0) == '-';
 		return false;
@@ -92,7 +93,7 @@ public class ArgumentParser {
 	 * @see String#startsWith(String)
 	 * @see String#length()
 	 */
-	public static boolean isValue(String arg) {
+	public static boolean isValue(String arg) { // TODO Fix?
 		if (arg != null)
 			return arg.length() > 0 && arg.charAt(0) != '-';
 		return false;
@@ -168,7 +169,7 @@ public class ArgumentParser {
 		if (flag != null) {
 			String path = map.get(flag);
 			if (path != null)
-				return Paths.get(path);
+				return Paths.get(path); // TODO Path.of(...)
 		}
 		return null;
 	}
